--- a/gcart.html
+++ b/gcart.html
@@ -2,8 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Optimized viewport: perfect mobile fit + prevent unwanted zooming -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <meta name="title" content="My Cart — ChatPoint">
   <title>My Cart — ChatPoint</title>
+
+  <!-- PWA / Add to Home Screen enhancements -->
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <meta name="theme-color" content="#2563eb">
+
   <style>
     :root {
       --primary: #2563eb;
@@ -20,16 +29,24 @@
       --shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.1);
       --radius: 12px;
     }
-
-    body {
-      font-family: system-ui, -apple-system, 'Segoe UI', Arial, sans-serif;
-      background: var(--bg);
+    * {
+      box-sizing: border-box;
+      -webkit-tap-highlight-color: transparent;
+    }
+    html, body {
       margin: 0;
       padding: 0;
+      height: 100%;
+      font-family: system-ui, -apple-system, 'Segoe UI', Arial, sans-serif;
+      background: var(--bg);
       color: var(--text);
       line-height: 1.5;
+      overscroll-behavior: none;
+      touch-action: manipulation; /* Improves touch response & reduces accidental zoom */
     }
-
+    body {
+      min-height: 100dvh; /* Better handling of mobile browser UI changes */
+    }
     .header {
       position: sticky;
       top: 0;
@@ -41,32 +58,28 @@
       gap: 16px;
       z-index: 10;
     }
-
     .back {
       font-size: 32px;
       cursor: pointer;
       color: var(--primary);
       font-weight: 300;
     }
-
     .title {
       font-size: 22px;
       font-weight: 600;
       flex: 1;
     }
-
     .container {
       padding: 24px 16px;
       max-width: 640px;
       margin: 0 auto;
+      padding-bottom: 120px; /* Extra space for bottom elements on small screens */
     }
-
     .cart-items {
       display: grid;
       gap: 20px;
       margin-bottom: 32px;
     }
-
     .cart-item {
       background: var(--card-bg);
       border-radius: var(--radius);
@@ -77,11 +90,9 @@
       box-shadow: var(--shadow-sm);
       transition: box-shadow 0.3s;
     }
-
     .cart-item:hover {
       box-shadow: var(--shadow);
     }
-
     .cart-item img {
       width: 90px;
       height: 90px;
@@ -89,31 +100,26 @@
       border-radius: var(--radius);
       background: #f1f5f9;
     }
-
     .item-details {
       flex: 1;
     }
-
     .item-name {
       font-weight: 600;
       font-size: 18px;
       margin-bottom: 6px;
       color: var(--text);
     }
-
     .item-price {
       color: var(--primary);
       font-weight: bold;
       font-size: 17px;
     }
-
     .quantity-controls {
       display: flex;
       align-items: center;
       gap: 16px;
       margin-top: 12px;
     }
-
     .qty-btn {
       width: 40px;
       height: 40px;
@@ -126,29 +132,24 @@
       color: var(--text);
       transition: background 0.2s;
     }
-
     .qty-btn:hover {
       background: #e2e8f0;
     }
-
     .qty-btn:active {
       transform: scale(0.95);
     }
-
     .quantity {
       font-size: 18px;
       font-weight: 600;
       min-width: 40px;
       text-align: center;
     }
-
     .remove-btn {
       color: var(--danger);
       font-size: 28px;
       cursor: pointer;
       font-weight: 300;
     }
-
     .total-section {
       background: var(--card-bg);
       padding: 24px;
@@ -156,14 +157,12 @@
       box-shadow: var(--shadow-sm);
       margin-bottom: 32px;
     }
-
     .total-row {
       display: flex;
       justify-content: space-between;
       font-size: 17px;
       margin-bottom: 16px;
     }
-
     .grand-total {
       font-size: 22px;
       font-weight: bold;
@@ -171,13 +170,11 @@
       padding-top: 12px;
       border-top: 2px solid var(--border);
     }
-
     .coupon-section {
       display: flex;
       gap: 10px;
       margin-bottom: 20px;
     }
-
     .coupon-input {
       flex: 1;
       padding: 14px;
@@ -185,7 +182,6 @@
       border-radius: var(--radius);
       font-size: 16px;
     }
-
     .coupon-btn {
       padding: 0 20px;
       background: var(--primary);
@@ -195,16 +191,13 @@
       font-weight: 600;
       cursor: pointer;
     }
-
     .coupon-msg {
       margin-top: 8px;
       font-size: 14px;
       text-align: center;
     }
-
     .success-msg { color: var(--success); }
     .error-msg { color: var(--danger); }
-
     .min-order-note {
       font-size: 15px;
       color: var(--danger);
@@ -212,14 +205,12 @@
       margin: 16px 0 8px;
       font-weight: 500;
     }
-
     .checkout-form {
       background: var(--card-bg);
       padding: 24px;
       border-radius: var(--radius);
       box-shadow: var(--shadow-sm);
     }
-
     .checkout-form input,
     .checkout-form textarea {
       width: 100%;
@@ -230,14 +221,12 @@
       font-size: 16px;
       box-sizing: border-box;
     }
-
     .checkout-form input:focus,
     .checkout-form textarea:focus {
       outline: none;
       border-color: var(--primary);
       box-shadow: 0 0 0 3px rgba(37, 99, 235, 0.15);
     }
-
     .checkout-btn {
       width: 100%;
       background: var(--primary);
@@ -252,18 +241,15 @@
       box-shadow: 0 8px 20px rgba(37, 99, 235, 0.25);
       transition: all 0.3s;
     }
-
     .checkout-btn:hover {
       background: var(--primary-dark);
       transform: translateY(-2px);
     }
-
     .checkout-btn:disabled {
       background: #94a3b8;
       cursor: not-allowed;
       box-shadow: none;
     }
-
     .empty-cart,
     .login-required {
       text-align: center;
@@ -271,7 +257,6 @@
       color: var(--text-light);
       font-size: 19px;
     }
-
     .empty-cart a,
     .login-required a {
       color: var(--primary);
@@ -344,8 +329,8 @@
       "welcome104": { type: "percent", value: 2, maxDiscount: 8, minAmount: 299, category: "all" }
     };
 
-    // FMCG items (you can expand this list based on your items)
-    const FMCG_ITEMS = ["shampoo", "soap", "oil", "rice", "dal", "atta", "toothpaste", "detergent"]; // lowercase for matching
+    // FMCG items (expand as needed)
+    const FMCG_ITEMS = ["shampoo", "soap", "oil", "rice", "dal", "atta", "toothpaste", "detergent"];
 
     let cart = JSON.parse(localStorage.getItem('cart') || '[]');
     const user = JSON.parse(localStorage.getItem('chatpoint_user') || null);
@@ -437,7 +422,6 @@
         const fmcgTotal = cart
           .filter(item => FMCG_ITEMS.some(f => item.name.toLowerCase().includes(f)))
           .reduce((sum, item) => sum + item.price * item.qty, 0);
-
         if (fmcgTotal === 0) {
           msgDiv.textContent = 'No FMCG items in cart';
           msgDiv.classList.add('error-msg');
@@ -455,17 +439,15 @@
 
     function calculateTotal() {
       const subtotal = cart.reduce((sum, item) => sum + item.price * item.qty, 0);
-
       let discount = 0;
+
       if (appliedCoupon) {
         let applicableAmount = subtotal;
-
         if (appliedCoupon.category === "fmcg") {
           applicableAmount = cart
             .filter(item => FMCG_ITEMS.some(f => item.name.toLowerCase().includes(f)))
             .reduce((sum, item) => sum + item.price * item.qty, 0);
         }
-
         discount = (applicableAmount * appliedCoupon.value) / 100;
         if (appliedCoupon.maxDiscount) {
           discount = Math.min(discount, appliedCoupon.maxDiscount);
@@ -480,7 +462,6 @@
       const checkoutBtn = document.getElementById('checkoutBtn');
       const minOrderNote = document.getElementById('minOrderNote');
 
-      // Minimum order checked on ORIGINAL subtotal (before coupon)
       if (subtotal >= MIN_ORDER) {
         checkoutBtn.disabled = false;
         minOrderNote.style.display = 'none';
@@ -511,7 +492,8 @@
       if (appliedCoupon) {
         let applicableAmount = subtotal;
         if (appliedCoupon.category === "fmcg") {
-          applicableAmount = cart.filter(item => FMCG_ITEMS.some(f => item.name.toLowerCase().includes(f)))
+          applicableAmount = cart
+            .filter(item => FMCG_ITEMS.some(f => item.name.toLowerCase().includes(f)))
             .reduce((sum, item) => sum + item.price * item.qty, 0);
         }
         discount = Math.min((applicableAmount * appliedCoupon.value) / 100, appliedCoupon.maxDiscount || Infinity);
@@ -543,7 +525,6 @@
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify(body)
         });
-
         const data = await res.json();
 
         if (data.success) {
