--- a/gcart.html
+++ b/gcart.html
@@ -2,17 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <!-- Optimized viewport: perfect mobile fit + prevent unwanted zooming -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <meta name="title" content="My Cart — ChatPoint">
   <title>My Cart — ChatPoint</title>
-
-  <!-- PWA / Add to Home Screen enhancements -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <meta name="theme-color" content="#2563eb">
-
   <style>
     :root {
       --primary: #2563eb;
@@ -29,241 +25,45 @@
       --shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.1);
       --radius: 12px;
     }
-    * {
-      box-sizing: border-box;
-      -webkit-tap-highlight-color: transparent;
-    }
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      font-family: system-ui, -apple-system, 'Segoe UI', Arial, sans-serif;
-      background: var(--bg);
-      color: var(--text);
-      line-height: 1.5;
-      overscroll-behavior: none;
-      touch-action: manipulation; /* Improves touch response & reduces accidental zoom */
-    }
-    body {
-      min-height: 100dvh; /* Better handling of mobile browser UI changes */
-    }
-    .header {
-      position: sticky;
-      top: 0;
-      background: var(--card-bg);
-      padding: 16px 20px;
-      box-shadow: var(--shadow-sm);
-      display: flex;
-      align-items: center;
-      gap: 16px;
-      z-index: 10;
-    }
-    .back {
-      font-size: 32px;
-      cursor: pointer;
-      color: var(--primary);
-      font-weight: 300;
-    }
-    .title {
-      font-size: 22px;
-      font-weight: 600;
-      flex: 1;
-    }
-    .container {
-      padding: 24px 16px;
-      max-width: 640px;
-      margin: 0 auto;
-      padding-bottom: 120px; /* Extra space for bottom elements on small screens */
-    }
-    .cart-items {
-      display: grid;
-      gap: 20px;
-      margin-bottom: 32px;
-    }
-    .cart-item {
-      background: var(--card-bg);
-      border-radius: var(--radius);
-      padding: 20px;
-      display: flex;
-      align-items: center;
-      gap: 20px;
-      box-shadow: var(--shadow-sm);
-      transition: box-shadow 0.3s;
-    }
-    .cart-item:hover {
-      box-shadow: var(--shadow);
-    }
-    .cart-item img {
-      width: 90px;
-      height: 90px;
-      object-fit: cover;
-      border-radius: var(--radius);
-      background: #f1f5f9;
-    }
-    .item-details {
-      flex: 1;
-    }
-    .item-name {
-      font-weight: 600;
-      font-size: 18px;
-      margin-bottom: 6px;
-      color: var(--text);
-    }
-    .item-price {
-      color: var(--primary);
-      font-weight: bold;
-      font-size: 17px;
-    }
-    .quantity-controls {
-      display: flex;
-      align-items: center;
-      gap: 16px;
-      margin-top: 12px;
-    }
-    .qty-btn {
-      width: 40px;
-      height: 40px;
-      background: #f1f5f9;
-      border: none;
-      border-radius: 50%;
-      font-size: 20px;
-      font-weight: bold;
-      cursor: pointer;
-      color: var(--text);
-      transition: background 0.2s;
-    }
-    .qty-btn:hover {
-      background: #e2e8f0;
-    }
-    .qty-btn:active {
-      transform: scale(0.95);
-    }
-    .quantity {
-      font-size: 18px;
-      font-weight: 600;
-      min-width: 40px;
-      text-align: center;
-    }
-    .remove-btn {
-      color: var(--danger);
-      font-size: 28px;
-      cursor: pointer;
-      font-weight: 300;
-    }
-    .total-section {
-      background: var(--card-bg);
-      padding: 24px;
-      border-radius: var(--radius);
-      box-shadow: var(--shadow-sm);
-      margin-bottom: 32px;
-    }
-    .total-row {
-      display: flex;
-      justify-content: space-between;
-      font-size: 17px;
-      margin-bottom: 16px;
-    }
-    .grand-total {
-      font-size: 22px;
-      font-weight: bold;
-      color: var(--primary);
-      padding-top: 12px;
-      border-top: 2px solid var(--border);
-    }
-    .coupon-section {
-      display: flex;
-      gap: 10px;
-      margin-bottom: 20px;
-    }
-    .coupon-input {
-      flex: 1;
-      padding: 14px;
-      border: 1px solid var(--border);
-      border-radius: var(--radius);
-      font-size: 16px;
-    }
-    .coupon-btn {
-      padding: 0 20px;
-      background: var(--primary);
-      color: white;
-      border: none;
-      border-radius: var(--radius);
-      font-weight: 600;
-      cursor: pointer;
-    }
-    .coupon-msg {
-      margin-top: 8px;
-      font-size: 14px;
-      text-align: center;
-    }
+    * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
+    html, body { margin: 0; padding: 0; height: 100%; font-family: system-ui, -apple-system, 'Segoe UI', Arial, sans-serif; background: var(--bg); color: var(--text); line-height: 1.5; overscroll-behavior: none; touch-action: manipulation; }
+    body { min-height: 100dvh; }
+    .header { position: sticky; top: 0; background: var(--card-bg); padding: 16px 20px; box-shadow: var(--shadow-sm); display: flex; align-items: center; gap: 16px; z-index: 10; }
+    .back { font-size: 32px; cursor: pointer; color: var(--primary); font-weight: 300; }
+    .title { font-size: 22px; font-weight: 600; flex: 1; }
+    .container { padding: 24px 16px; max-width: 640px; margin: 0 auto; padding-bottom: 120px; }
+    /* ... (rest of your CSS remains unchanged - same as before) ... */
+    .cart-items { display: grid; gap: 20px; margin-bottom: 32px; }
+    .cart-item { background: var(--card-bg); border-radius: var(--radius); padding: 20px; display: flex; align-items: center; gap: 20px; box-shadow: var(--shadow-sm); transition: box-shadow 0.3s; }
+    .cart-item:hover { box-shadow: var(--shadow); }
+    .cart-item img { width: 90px; height: 90px; object-fit: cover; border-radius: var(--radius); background: #f1f5f9; }
+    .item-details { flex: 1; }
+    .item-name { font-weight: 600; font-size: 18px; margin-bottom: 6px; }
+    .item-price { color: var(--primary); font-weight: bold; font-size: 17px; }
+    .quantity-controls { display: flex; align-items: center; gap: 16px; margin-top: 12px; }
+    .qty-btn { width: 40px; height: 40px; background: #f1f5f9; border: none; border-radius: 50%; font-size: 20px; font-weight: bold; cursor: pointer; color: var(--text); transition: background 0.2s; }
+    .qty-btn:hover { background: #e2e8f0; }
+    .qty-btn:active { transform: scale(0.95); }
+    .quantity { font-size: 18px; font-weight: 600; min-width: 40px; text-align: center; }
+    .remove-btn { color: var(--danger); font-size: 28px; cursor: pointer; font-weight: 300; }
+    .total-section { background: var(--card-bg); padding: 24px; border-radius: var(--radius); box-shadow: var(--shadow-sm); margin-bottom: 32px; }
+    .total-row { display: flex; justify-content: space-between; font-size: 17px; margin-bottom: 16px; }
+    .grand-total { font-size: 22px; font-weight: bold; color: var(--primary); padding-top: 12px; border-top: 2px solid var(--border); }
+    .coupon-section { display: flex; gap: 10px; margin-bottom: 20px; }
+    .coupon-input { flex: 1; padding: 14px; border: 1px solid var(--border); border-radius: var(--radius); font-size: 16px; }
+    .coupon-btn { padding: 0 20px; background: var(--primary); color: white; border: none; border-radius: var(--radius); font-weight: 600; cursor: pointer; }
+    .coupon-msg { margin-top: 8px; font-size: 14px; text-align: center; }
     .success-msg { color: var(--success); }
     .error-msg { color: var(--danger); }
-    .min-order-note {
-      font-size: 15px;
-      color: var(--danger);
-      text-align: center;
-      margin: 16px 0 8px;
-      font-weight: 500;
-    }
-    .checkout-form {
-      background: var(--card-bg);
-      padding: 24px;
-      border-radius: var(--radius);
-      box-shadow: var(--shadow-sm);
-    }
-    .checkout-form input,
-    .checkout-form textarea {
-      width: 100%;
-      padding: 16px;
-      margin: 12px 0;
-      border: 1px solid var(--border);
-      border-radius: var(--radius);
-      font-size: 16px;
-      box-sizing: border-box;
-    }
-    .checkout-form input:focus,
-    .checkout-form textarea:focus {
-      outline: none;
-      border-color: var(--primary);
-      box-shadow: 0 0 0 3px rgba(37, 99, 235, 0.15);
-    }
-    .checkout-btn {
-      width: 100%;
-      background: var(--primary);
-      color: white;
-      border: none;
-      padding: 18px;
-      font-size: 18px;
-      font-weight: 600;
-      border-radius: var(--radius);
-      cursor: pointer;
-      margin-top: 16px;
-      box-shadow: 0 8px 20px rgba(37, 99, 235, 0.25);
-      transition: all 0.3s;
-    }
-    .checkout-btn:hover {
-      background: var(--primary-dark);
-      transform: translateY(-2px);
-    }
-    .checkout-btn:disabled {
-      background: #94a3b8;
-      cursor: not-allowed;
-      box-shadow: none;
-    }
-    .empty-cart,
-    .login-required {
-      text-align: center;
-      padding: 80px 20px;
-      color: var(--text-light);
-      font-size: 19px;
-    }
-    .empty-cart a,
-    .login-required a {
-      color: var(--primary);
-      text-decoration: none;
-      font-weight: 600;
-      font-size: 18px;
-    }
+    .min-order-note { font-size: 15px; color: var(--danger); text-align: center; margin: 16px 0 8px; font-weight: 500; }
+    .checkout-form { background: var(--card-bg); padding: 24px; border-radius: var(--radius); box-shadow: var(--shadow-sm); }
+    .checkout-form input, .checkout-form textarea { width: 100%; padding: 16px; margin: 12px 0; border: 1px solid var(--border); border-radius: var(--radius); font-size: 16px; box-sizing: border-box; }
+    .checkout-form input:focus, .checkout-form textarea:focus { outline: none; border-color: var(--primary); box-shadow: 0 0 0 3px rgba(37, 99, 235, 0.15); }
+    .checkout-btn { width: 100%; background: var(--primary); color: white; border: none; padding: 18px; font-size: 18px; font-weight: 600; border-radius: var(--radius); cursor: pointer; margin-top: 16px; box-shadow: 0 8px 20px rgba(37, 99, 235, 0.25); transition: all 0.3s; }
+    .checkout-btn:hover { background: var(--primary-dark); transform: translateY(-2px); }
+    .checkout-btn:disabled { background: #94a3b8; cursor: not-allowed; box-shadow: none; }
+    .empty-cart, .login-required { text-align: center; padding: 80px 20px; color: var(--text-light); font-size: 19px; }
+    .empty-cart a, .login-required a { color: var(--primary); text-decoration: none; font-weight: 600; font-size: 18px; }
   </style>
 </head>
 <body>
@@ -271,48 +71,37 @@
     <div class="back" onclick="history.back()">←</div>
     <div class="title">My Cart</div>
   </div>
-
   <div class="container">
     <div id="loginRequired" class="login-required" style="display:none;">
       <p>You need to login to view your cart</p>
       <p><a href="login.html">Login Now →</a></p>
     </div>
-
     <div id="cartContent">
       <div id="cartItems" class="cart-items"></div>
-
       <div id="emptyCart" class="empty-cart" style="display:none;">
         <p>Your cart is empty</p>
         <p><a href="index.html">Continue Shopping →</a></p>
       </div>
-
       <div id="totalSection" class="total-section" style="display:none;">
         <div class="total-row">
           <span>Subtotal</span>
           <span id="subtotal">₹0</span>
         </div>
-
-        <!-- Coupon Section -->
         <div class="coupon-section">
           <input type="text" id="couponCode" class="coupon-input" placeholder="Enter coupon code">
           <button class="coupon-btn" onclick="applyCoupon()">Apply</button>
         </div>
         <div id="couponMsg" class="coupon-msg"></div>
-
         <div class="total-row grand-total">
           <span>Grand Total</span>
           <span id="grandTotal">₹0</span>
         </div>
-
         <div class="min-order-note" id="minOrderNote"></div>
-
         <div class="checkout-form">
           <input type="text" id="name" placeholder="Your Full Name" required>
           <input type="tel" id="phone" placeholder="Phone Number" required>
           <textarea id="address" placeholder="Full Delivery Address (with landmark)" rows="4" required></textarea>
-          <button class="checkout-btn" id="checkoutBtn" onclick="placeOrder()" disabled>
-            Place Order
-          </button>
+          <button class="checkout-btn" id="checkoutBtn" onclick="placeOrder()" disabled>Place Order</button>
         </div>
       </div>
     </div>
@@ -321,15 +110,11 @@
   <script>
     const MIN_ORDER = 300;
     const FIXED_DELIVERY = 20;
-
-    // Define coupons
     const COUPONS = {
       "me0204": { type: "percent", value: 5, maxDiscount: null, minAmount: 500, category: "all" },
       "dec10": { type: "percent", value: 10, maxDiscount: 10, minAmount: 0, category: "fmcg" },
       "welcome104": { type: "percent", value: 2, maxDiscount: 8, minAmount: 299, category: "all" }
     };
-
-    // FMCG items (expand as needed)
     const FMCG_ITEMS = ["shampoo", "soap", "oil", "rice", "dal", "atta", "toothpaste", "detergent"];
 
     let cart = JSON.parse(localStorage.getItem('cart') || '[]');
@@ -394,6 +179,7 @@
     }
 
     function applyCoupon() {
+      // ... (your existing applyCoupon logic - unchanged)
       const code = document.getElementById('couponCode').value.trim().toLowerCase();
       const msgDiv = document.getElementById('couponMsg');
       msgDiv.textContent = '';
@@ -419,8 +205,7 @@
       }
 
       if (coupon.category === "fmcg") {
-        const fmcgTotal = cart
-          .filter(item => FMCG_ITEMS.some(f => item.name.toLowerCase().includes(f)))
+        const fmcgTotal = cart.filter(item => FMCG_ITEMS.some(f => item.name.toLowerCase().includes(f)))
           .reduce((sum, item) => sum + item.price * item.qty, 0);
         if (fmcgTotal === 0) {
           msgDiv.textContent = 'No FMCG items in cart';
@@ -438,22 +223,18 @@
     }
 
     function calculateTotal() {
+      // ... (your existing calculateTotal logic - unchanged)
       const subtotal = cart.reduce((sum, item) => sum + item.price * item.qty, 0);
       let discount = 0;
-
       if (appliedCoupon) {
         let applicableAmount = subtotal;
         if (appliedCoupon.category === "fmcg") {
-          applicableAmount = cart
-            .filter(item => FMCG_ITEMS.some(f => item.name.toLowerCase().includes(f)))
+          applicableAmount = cart.filter(item => FMCG_ITEMS.some(f => item.name.toLowerCase().includes(f)))
             .reduce((sum, item) => sum + item.price * item.qty, 0);
         }
         discount = (applicableAmount * appliedCoupon.value) / 100;
-        if (appliedCoupon.maxDiscount) {
-          discount = Math.min(discount, appliedCoupon.maxDiscount);
-        }
+        if (appliedCoupon.maxDiscount) discount = Math.min(discount, appliedCoupon.maxDiscount);
       }
-
       const finalAmount = Math.round(subtotal - discount + FIXED_DELIVERY);
 
       document.getElementById('subtotal').textContent = `₹${subtotal}`;
@@ -473,60 +254,41 @@
     }
 
     async function placeOrder() {
+      // ... (your existing placeOrder logic - unchanged)
       const name = document.getElementById('name').value.trim();
       const phone = document.getElementById('phone').value.trim();
       const address = document.getElementById('address').value.trim();
-
-      if (!name || !phone || !address) {
-        alert("Please fill in all the details");
-        return;
-      }
+      if (!name || !phone || !address) return alert("Please fill in all the details");
 
       const subtotal = cart.reduce((sum, item) => sum + item.price * item.qty, 0);
-      if (subtotal < MIN_ORDER) {
-        alert(`Minimum order amount is ₹${MIN_ORDER}`);
-        return;
-      }
+      if (subtotal < MIN_ORDER) return alert(`Minimum order amount is ₹${MIN_ORDER}`);
 
       let discount = 0;
       if (appliedCoupon) {
         let applicableAmount = subtotal;
         if (appliedCoupon.category === "fmcg") {
-          applicableAmount = cart
-            .filter(item => FMCG_ITEMS.some(f => item.name.toLowerCase().includes(f)))
+          applicableAmount = cart.filter(item => FMCG_ITEMS.some(f => item.name.toLowerCase().includes(f)))
             .reduce((sum, item) => sum + item.price * item.qty, 0);
         }
         discount = Math.min((applicableAmount * appliedCoupon.value) / 100, appliedCoupon.maxDiscount || Infinity);
       }
-
       const grandTotal = Math.round(subtotal - discount + FIXED_DELIVERY);
 
       const cartObj = { "ChatPoint": {} };
-      cart.forEach(item => {
-        cartObj["ChatPoint"][item.name] = { price: item.price, qty: item.qty };
-      });
+      cart.forEach(item => cartObj["ChatPoint"][item.name] = { price: item.price, qty: item.qty });
 
       const body = {
-        name,
-        phone,
-        address1: address,
-        grandTotal,
-        cart: cartObj,
+        name, phone, address1: address, grandTotal, cart: cartObj,
         coupon: appliedCoupon ? appliedCoupon.code.toUpperCase() : null,
         discountAmount: discount,
-        userId: user ? user._id : null,
-        customer_name: user ? user.name : name,
-        customer_phone: user ? user.phone : phone
+        userId: user?._id || null,
+        customer_name: user?.name || name,
+        customer_phone: user?.phone || phone
       };
 
       try {
-        const res = await fetch("/api/order", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify(body)
-        });
+        const res = await fetch("/api/order", { method: "POST", headers: { "Content-Type": "application/json" }, body: JSON.stringify(body) });
         const data = await res.json();
-
         if (data.success) {
           alert("Order placed successfully! 🎉");
           localStorage.removeItem('cart');
@@ -538,10 +300,14 @@
           alert("Order failed: " + (data.message || "Please try again"));
         }
       } catch (err) {
-        console.error(err);
         alert("Network error. Please check your connection.");
       }
     }
+
+    // Ensure UI refreshes if page is restored from cache
+    window.addEventListener('pageshow', (e) => {
+      if (e.persisted) location.reload();
+    });
   </script>
 </body>
 </html>
